<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CJay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_email">Nhập email</string>
    <string name="prompt_password">Nhập mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Đang đăng nhập…</string>
    <string name="login_progress_loading_data">Đang tải dữ liệu</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_incorrect_password">Sai thông tin đăng nhập</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_field_required">Bạn chưa điền email</string>
    <string name="error_password_field_required">Bạn chưa điền mật khẩu</string>
    <string name="error_try_again">Có lỗi phát sinh. Hãy thử đăng nhập lại</string>
    <string name="error_connection">Không thể kết nối mạng, vui lòng thử lại</string>
    <string name="title_activity_audit">AuditActivity</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="title_activity_reuse">Chọn hình Gate-in</string>
    <string name="title_activity_repair">RepairActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_link_issue">LinkIssueActivity</string>
    <string name="title_activity_report_issue">ReportIssueActivity</string>
    <string name="title_activity_main_process">MainProcessActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_view_images_previous_steps">Hình các bước trước</string>
    <string name="title_activity_log">Nhật ký tải lên</string>
    <string name="dialog_create_container_id_invalid_iso">Tạo container sai ISO</string>
    <string name="btn_search">Tìm kiếm</string>

    <!--  -->

    <string name="standard">Standard</string>
    <string name="ffc">Front-Facing</string>
    <string name="record">Record Video</string>
    <string name="stop">Stop</string>
    <string name="lock_to_landscape">Lock to Landscape</string>
    <string name="launch_camera_app">Launch Camera App</string>
    <string name="take_picture">Take Picture</string>
    <string name="auto_focus">Auto-focus</string>
    <string name="single_shot_mode">Single-Shot Mode</string>
    <string name="no_image">There was no image to show!</string>
    <string name="show_zoom">Show Zoom</string>
    <string name="flash">Flash</string>
    <string name="launch_full_screen">Launch Full-Screen</string>
    <string name="mirror_ffc">Mirror FFC</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>

    <!-- - Fragments name -->
    <!-- 3 fragments in HomeActivity Tabs -->
    <string name="fragment_search_title">Tìm kiếm</string>
    <string name="fragment_working_title">Đang làm</string>
    <string name="fragment_upload_title">Tải lên</string>

    <!-- 2 fragments in RepairFragmentTab -->
    <string name="fragment_issue_pending">Danh sách lỗi</string>
    <string name="fragment_issue_repaired">Đã sửa chữa</string>
    <string name="fragment_search_pb_searching">Đang tìm kiếm</string>
    <string name="fragment_search_hint_et_search">Nhập container ID cần tìm</string>
    <string name="fragment_search_btn_search">Tìm kiếm</string>
    <string name="dialog_container_id_required">Chưa nhập container ID</string>
    <string name="dialog_container_id_invalid">Container ID không đúng quy định</string>
    <string name="dialog_container_id_invalid_length">Container ID đủ 11 ký tự</string>
    <string name="dialog_container_id_invalid_iso">Container ID không đúng chuẩn ISO</string>

    <!-- Camera Button -->
    <string name="camera_done">Xong</string>
    <string name="require_select_operator_first">Vui lòng chọn hãng tàu trước khi chụp</string>
    <string name="btn_use_gate_in_image_title">GATE</string>
    <string name="alert_camera_preview">Ứng dụng không xử lý kịp. Hãy chụp chậm lại.</string>

    <!-- Dialog Search Operator -->
    <string name="dialog_container_owner">Hãng tàu</string>
    <string name="dialog_operator_title">Danh sách hãng tàu</string>

    <!-- Dialog Search Session Result -->
    <string name="dialog_search_container_title">Không tìm thấy Container</string>
    <string name="search_on_server">Bắt đầu tìm kiếm trên server</string>
    <string name="dialog_alert_title">Alert</string>
    <string name="dialog_message_use_gate_in_image">Có muốn sử dụng hình chụp ở cổng?</string>

    <!-- Button titles -->
    <string name="button_completed">Hoàn tất</string>
    <string name="button_audit_now">Giám định ngay</string>
    <string name="button_audit_complete">Hoàn tất giám định</string>
    <string name="button_repair_complete">Hoàn tất sữa chửa</string>
    <string name="button_add_issues_image">Bổ sung lỗi</string>
    <string name="button_approve">Duyệt</string>
    <string name="button_approved">Đã duyệt</string>
    <string name="button_upload">Tải lên</string>
    <string name="button_edit">Chỉnh sửa</string>
    <string name="button_take_export_picture">Chụp hình xuất</string>
    <string name="button_report">Báo cáo</string>
    <string name="button_repair">Sửa chữa</string>
    <string name="button_take_new_audit_image">Chụp lỗi mới</string>
    <string name="button_add_new_audit_image">Thêm hình giám định</string>
    <string name="button_add_new_repair_image">Thêm hình sửa chữa</string>

    <!-- Label for container item -->
    <string name="label_container_id">Container ID: </string>
    <string name="label_operator_code">Hãng tàu: </string>
    <string name="label_date_created">Ngày tạo: </string>
    <string name="label_date_out">Ngày xuất</string>
    <string name="label_on_step">Bước đang làm: </string>
    <string name="label_pre_status">Trạng thái đầu vào: </string>
    <string name="label_current_status">Trạng thái hiện tại</string>

    <!-- Menu items -->
    <string name="menu_logout_title">Logout</string>
    <string name="menu_username_title">Username</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_role_title">Role</string>
    <string name="menu_upload_log_title">Log</string>
    <string name="logout_prompt_title">Dữ liệu sẽ mất sau khi đăng xuất. Bạn có chắc chưa?</string>
    <string name="menu_setting_title">Setting</string>

    <!-- Main flow fragment titles -->
    <string name="fragment_import_title">Nhập</string>
    <string name="fragment_audit_title">Giám định</string>
    <string name="fragment_repair_title">Giám định</string>
    <string name="fragment_export_title">Xuất</string>

    <!-- Text Error -->
    <string name="error_empty_search_string">Vui lòng nhập 6 ký tự trở lên để tìm kiếm</string>

    <!-- Label for error item -->
    <string name="label_code_component">CODE component:</string>
    <string name="label_code_location">CODE vị trí:</string>
    <string name="label_code_damage">CODE hư hỏng:</string>
    <string name="label_code_repair">CODE sửa chữa:</string>
    <string name="label_dimension">Kích thước:</string>
    <string name="label_length">Dài:</string>
    <string name="label_height">Rộng:</string>
    <string name="label_quantity">Số lượng:</string>
    <string name="label_status">Trạng thái:</string>

    <!-- Image Type Descriptions -->
    <string name="image_type_description_import">Hình Nhập</string>
    <string name="image_type_description_export">Hình Xuất</string>
    <string name="image_type_description_report">Hình Giám Định</string>
    <string name="image_type_description_repaired">Hình Sửa Chữa</string>
    <string name="no_working_item">No available items</string>
    <string name="chose_issue_has_been_audited">Chọn lỗi đã giám định</string>

    <!-- Issue status -->
    <string name="issue_unapproved">Chưa duyệt</string>
    <string name="issue_approved">Đã duyệt</string>
    <string name="issue_can_not_repair">Cấm sửa</string>
    <string name="issue_code_missing_warning">Xin vui lòng nhập code</string>
    <string name="camera_saving">Đang lưu ảnh...</string>
    <string name="menu_clear_uploaded_title">Clear</string>

    <!-- Warning -->
    <string name="warning_exported_container">Container này đã được xuất</string>
    <string name="warning_container_invalid">Container chưa được báo cáo đầy đủ</string>
    <string name="error_container_is_already_existed">Container này đã tồn tại</string>
    <string name="warning_rainy_mode_dialog">Vãn còn hình thiếu thông tin, tiếp tục?</string>
    <string name="title_activity_new_camera">CameraActivity</string>
    <string name="title_activity_rainy_mode">RainyMode</string>

    <string name="info_notification_is_working">Notification đang hoạt động</string>

</resources>
