<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/action_overflow"
		android:icon="@android:drawable/ic_menu_agenda"
		android:orderInCategory="101"
		android:showAsAction="always"
		android:title="">
		<menu>
			<item
				android:id="@+id/menu_refresh"
				android:icon="@android:drawable/ic_menu_rotate"
				android:menuCategory="secondary"
				android:showAsAction="never"
				android:title="@string/menu_refresh"/>
			<item
				android:id="@+id/menu_upload_log"
				android:icon="@android:drawable/ic_menu_recent_history"
				android:menuCategory="secondary"
				android:showAsAction="never"
				android:title="@string/menu_upload_log_title"/>
			<item
				android:id="@+id/menu_username"
				android:icon="@android:drawable/ic_btn_speak_now"
				android:menuCategory="secondary"
				android:showAsAction="never"
				android:title="@string/menu_username_title"/>
			<item
				android:id="@+id/menu_role"
				android:icon="@android:drawable/ic_menu_compass"
				android:menuCategory="secondary"
				android:showAsAction="never"
				android:title="@string/menu_role_title"/>
			<item
				android:id="@+id/menu_logout"
				android:icon="@android:drawable/ic_lock_power_off"
				android:menuCategory="secondary"
				android:showAsAction="never"
				android:title="@string/menu_logout_title"/>
		</menu>
	</item>
</menu>